crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@95.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('Feb 29 17:32:01 1997');"
---
InsertStmt@0..60
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..58
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..58
      AConst@36..58
        Sconst@36..58 "'Feb 29 17:32:01 1997'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

