crates/pg_syntax/tests/snapshots/postgres_regress/timetz@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMETZ_TBL VALUES ('23:59 PDT');"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "TIMETZ_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..42
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..42
      AConst@31..42
        Sconst@31..42 "'23:59 PDT'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

