crates/pg_syntax/tests/snapshots/postgres_regress/timetz@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMETZ_TBL VALUES ('11:59:59.99 PM PDT');"
---
InsertStmt@0..53
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "TIMETZ_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..51
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..51
      AConst@31..51
        Sconst@31..51 "'11:59:59.99 PM PDT'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

